# Selene-V2

./: .gitignore  .gitmodules  AUDIT_FASE1_BUGS.md  AUDIT_FASE2_CIENCIA.md  AUDIT_FINAL_PLANO_V37.md  AUDIT_INDEX.md  AUDIT_RESIDUAL_TEXT.md  AUDIT_RESUMO_EXECUTIVO.md  AUDIT_STATUS_FINAL.md  BACKGROUND_TESTS_RESULTS.md  CLAUDE.md  Cargo.toml  DETAILED_TEST_PLAN.md  LATERALIZACAO_ANALISE.md  MANUAL_ENGRAMS.md  README.md  SECURITY_AUDIT_AND_FIXES.md  SELENE_AUDIT_PROGRESS.md  SELENE_SCIENTIFIC_ANALYSIS.md  SELENE_V3_2.md  TEST_RESULTS_COMPREHENSIVE.md  TRAINING_GUIDE.md  TRAINING_V4_GUIDE.md  V3.7_IMPLEMENTATION_ROADMAP.md  aprendizado_prolongado.py  audiolivro_selene.py  baba_selene.py  benchmark_db.py  build_graph.py  cleanup_locks.ps1  clonar_conhecimento.py  grafo_selene.html  grafo_selene.json  grafo_template.html  implantar_conhecimento.py  jogo_selene.py  ler_documento.py  limpar_db.py  memoria_categorias.json  neural_interface.html  (+30 more)
.claude/: settings.local.json
.claude/commands/: Claude.md  selene.md  selene_evolution_blueprint.md
Scripts/: generate_lexicon.py  selene_exam.py  selene_tutor.py
Selene_world/: .pylintrc  Nomad Meadow.rms  README.md  atualização.txt  blackboard.py  bot_core.py  events.py  fisica.py  genealogia.py  lab.py  mutations.py  orchestrator.py  pyproject.toml  safety.py  selene_tasks.py  selene_world_3d.html  setup.cfg  system_resources.py  tasks.py  validar_evolucoes.py  viz_server.py  world.py  world_map.py
selene_android/: build.gradle  local.properties  settings.gradle
selene_android/app/: build.gradle  proguard-rules.pro
selene_android/app/src/main/: AndroidManifest.xml
selene_android/app/src/main/java/com/selene/android/: MainActivity.kt
selene_android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
selene_android/app/src/main/res/xml/: network_security_config.xml
selene_backup/backup_20260615_011317/: BACKUP_MANIFEST.txt  IDENTITY  LOG.old.1778544394929545  LOG.old.1778545351487746  MANIFEST-000128
selene_backup/backup_20260615_014055/: 000123.sst  000126.sst  000131.sst  BACKUP_MANIFEST.txt  LOG  LOG.old.1778544347683057  LOG.old.1778545400316889  LOG.old.1781487017982173  LOG.old.1781487159338767  LOG.old.1781487159557873  LOG.old.1781487190620886  LOG.old.1781487190716184  MANIFEST-000133  OPTIONS-000135
selene_checkpoints/20260429_053132/: CHECKPOINT.txt  selene_swap_state.json
selene_checkpoints/20260429_122048/: CHECKPOINT.txt
selene_checkpoints/20260429_171641/: CHECKPOINT.txt
selene_memories.db/: IDENTITY
src/: config.rs  hardware_profile.rs  lateralization.rs  lib.rs  main.rs  motor_babbling.rs  motor_cortex.rs  motor_primitives.rs  neural_pool.rs  neurochem.rs  sleep_cycle.rs  sleep_manager.rs  stem_cell.rs  synaptic_core.rs  synaptic_core_v3.rs  ternary.rs  websocket.rs
src/actuators/: mod.rs  speech.rs
src/basal_ganglia/: mod.rs
src/brain_zones/: amygdala.rs  ca3_attractor.rs  cerebellum.rs  cingulate.rs  corpus_callosum.rs  dentate_gyrus.rs  depth_stack.rs  frontal.rs  hippocampal_index.rs  hippocampus.rs  language.rs  limbic.rs  memory_engrams.rs  mirror_neurons.rs  mod.rs  occipital.rs  orbitofrontal.rs  parietal.rs  temporal.rs
src/brainstem/: mod.rs
src/compressor/: mod.rs  salient.rs
src/drivers/: opencl_gen.rs
src/ego/: mod.rs
src/encoding/: espectro_visual.rs  fft_encoder.rs  fonetico.rs  helix_store.rs  mod.rs  phoneme.rs  spike_codec.rs
src/glia/: mod.rs
src/interoception/: mod.rs
src/io/: pipeline.rs
src/learning/: active_context.rs  attention.rs  binding.rs  chunking.rs  curriculo.rs  go_nogo.rs  hypothesis.rs  inter_lobe.rs  lobe_router.rs  mod.rs  multimodal.rs  narrativa.rs  ontogeny.rs  pattern_engine.rs  pensamento.rs  priority_replay.rs  rl.rs  successor.rs  templates.rs  voices.rs
src/meta/: consciousness.rs  mod.rs
src/neurochem/: complex.rs
src/sensors/: audio.rs  camera.rs  hardware.rs  mod.rs  sensor_control.rs  vision_stream.rs
src/storage/: checkpoint.rs  episodic.rs  memory_graph.rs  memory_tier.rs  mod.rs  ondas.rs  reconsolidacao.rs  spike_store.rs  swap_manager.rs  tipos.rs
src/synthesis/: cpal_output.rs  formant_synth.rs  mod.rs
src/telemetry/: broadcaster.rs
src/thalamus/: mod.rs
src/websocket/: bridge.rs  converter.rs  mod.rs  server.rs
tests/: comprehensive_neural_tests.rs  detailed_level_tests.rs  lateralization_ternary_tests.rs  neurogenese_hibridos.rs  stress_v41.rs  validacao_allen.rs
tools/: corpus_ingestor.py
webots/: bones_dump.py  converter_urdf.py  gerar_corpos.py  pos_proto.py
webots/selene_nao/: selene_nao.py
