[package]
name = "selene_brain"
version = "2.0.0"
edition = "2021"

[lib]
name = "selene_kernel"
crate-type = ["rlib"]

[dependencies]
log = "0.4"
simplelog = "0.12"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "1.5", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9"
cpal = "0.15"
spectrum-analyzer = "1.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
half = { version = "2.4", features = ["serde"] }
bincode = "1.3"
warp = "0.3"
futures-util = "0.3"
futures = "0.3"
sysinfo = "0.30"
nokhwa = { version = "0.10", features = ["input-native"] }   # input-native = WinRT no Windows
base64 = "0.22"
# Mantemos o windows APENAS para timeBeginPeriod/timeEndPeriod
windows = { version = "0.52", features = ["Win32_Media"] }

[target.'cfg(windows)'.dependencies]
# V4.2: temperatura real CPU via WMI (Win32_PerfFormattedData_Counters_ThermalZoneInformation)
wmi = "0.13"
eframe = { version = "0.27", optional = true }
egui_graphs = { version = "0.21", optional = true }
petgraph = { version = "0.6", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }

[features]
test-bin = []
ego = []
gui = ["eframe", "egui_graphs", "petgraph", "tokio-tungstenite"]

[[bin]]
name = "selene_brain"
path = "src/main.rs"

[[bin]]
name = "check_selene"
path = "src/bin/check_selene.rs"
required-features = ["test-bin"]

[[bin]]
name = "system_checkup"
path = "src/bin/system_checkup.rs"
required-features = ["test-bin"]

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "learning_test"
path = "src/bin/learning_test.rs"

[[bin]]
name = "test_neuron_v3"
path = "src/bin/test_neuron_v3.rs"

[[bin]]
name = "stability_test"
path = "src/bin/stability_test.rs"

[[bin]]
name = "system_test"
path = "src/bin/system_test.rs"

[[bin]]
name = "intensive_benchmark"
path = "src/bin/intensive_benchmark.rs"

[[bin]]
name = "neural_viewer"
path = "src/bin/neural_viewer.rs"
required-features = ["gui"]

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 16
debug = true
strip = "none"

# Perfil para máquinas com pouca RAM (evita OOM do rustc ao compilar main.rs).
# Uso: cargo build --profile release-lowmem --bin selene_brain
#      binário em target/release-lowmem/selene_brain
# Mantém opt-level=2 + codegen-units=16 → runtime do loop 200Hz ~inalterado.
# Ganhos de memória: lto=false (sem IR cross-crate no link) + debug=false
# (sem DWARF/PDB — zero custo de runtime, só perde símbolos de depuração).
[profile.release-lowmem]
inherits = "release"
lto = false
debug = false
codegen-units = 16
strip = "symbols"

# Perfil AVELL STORM 450 (Ryzen 7 8745HS Zen4, 8c/16t, RTX 4050).
# Build agressivo — só para máquinas com RAM/CPU suficientes (NÃO usar no IdeaPad,
# faz OOM no rustc ao compilar main.rs). Loop 200Hz mais rápido.
# Uso (PowerShell):
#   $env:RUSTFLAGS="-C target-cpu=znver4"; cargo build --profile release-avell --bin selene_brain
#   binário em target/release-avell/selene_brain
# Em runtime, ativar o perfil de hardware: $env:SELENE_HW="avell"
[profile.release-avell]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"